syntax = "proto3";
package proto;

message Empty {}

message Autoscaler {
  string type = 1;
  string yaml = 2;
}

message Pod {
  string name = 1;
  string state = 2;
  int64 last_transition = 3;
  int32 cpu_request = 4;
}

enum EventType {
  CREATE = 0;
  UPDATE = 1;
  DELETE = 2;
}

message EventRequest {
  string partition = 1;
  int64 time = 2;
  EventType type = 3;
  oneof object_oneof {
    Autoscaler autoscaler = 4;
    Pod pod = 5;
  }
}

enum MetricType {
  CPU_MILLIS = 0;
  CONCURRENT_REQUESTS_MILLIS = 1;
}

message Stat {
  int64 time = 1;
  string pod_name = 2;
  MetricType type = 3;
  int32 value = 4;
}

message StatRequest {
  string partition = 1;
  repeated Stat stat = 2;
}


message VerticalRecommendationRequest{
  string partition = 1;
  int64 time_nanos = 2;
}

message VerticalRecommendationResponse{
  repeated RecommendedPodResources rec = 1;
}

message RecommendedPodResources{
  string pod_name = 1;
  int32 lower_bound = 2;
  int32 upper_bound = 3;
  int32 target = 4;
  string resource_name = 5;
}

message  HorizontalRecommendationRequest{
  string partition = 1;
  int64 time_nanos = 2;
}

message HorizontalRecommendationResponse{
  int32 rec = 1;
}

enum Capability{
  EVENT = 0;
  STAT = 1;
  VERTICAL_RECOMMENDATION = 2;
  HORIZONTAL_RECOMMENDATION = 3;
}

message GetCapabilitiesResponse{
  repeated Capability rec = 1;
}

message PluginTypeResponse{
  string rec = 1;
}

service Plugin {
  rpc Event(EventRequest) returns (Empty);
  rpc Stat(StatRequest) returns (Empty);
  rpc HorizontalRecommendation(HorizontalRecommendationRequest) returns (HorizontalRecommendationResponse);
  rpc VerticalRecommendation(VerticalRecommendationRequest) returns (VerticalRecommendationResponse);
  rpc GetCapabilities(Empty) returns (GetCapabilitiesResponse);
  rpc PluginType(Empty) returns (PluginTypeResponse);
}